# gpu-monitor

./: .gitignore  README.md  install.command  install.sh  launch-gpu-monitor.command
.github/workflows/: ci.yml
gpu-monitor-frontend-inspect/: .thumbnail  Resource Monitor.live.html
gpu-monitor-frontend-inspect/_ds/buidlpad-design-system-1e72c1c8-4d47-41f9-a92a-a26c60d474e3/: README.md  _adherence.oxlintrc.json  _ds_bundle.js  _ds_manifest.json  colors_and_type.css  components.css
local-resource-monitor-backend/: .gitignore  README.md  pyproject.toml
local-resource-monitor-backend/resource_monitor_backend/: __init__.py  analyzer.py  classification.py  collector.py  server.py  settings.py  store.py  timeutils.py
local-resource-monitor-backend/tests/: test_analyzer.py  test_collector.py  test_store.py
macos-menu-bar/: GPUStatusMenu.swift  Info.plist  build-menu-app.command
releases/: latest.json.example
scripts/: package-release.command
